--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=doctors.db"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=doctors;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
